--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -47,11 +47,7 @@ blocks:
         - name: Instrumentation tests(No email server) - part 1
           commands:
             # Setup and run an emulator
-            - $ANDROID_SDK_ROOT/emulator/emulator -accel-check
-            - echo -ne '\n' | avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
-            - cat ~/.android/avd/ci-test-pixel-x86-64-api29.avd/config.ini
-            - $ANDROID_SDK_ROOT/emulator/emulator -list-avds #debug
-            - $ANDROID_SDK_ROOT/emulator/emulator -avd ci-test-pixel-x86-64-api29 -no-window -no-boot-anim -no-audio &
+            - ./script/ci-setup-and-run-emulator.sh
             - ./script/ci-wait-for-emulator.sh #wait until ready
             # Run instrumentation tests
             - ./script/ci-instrumentation-tests-without-mailserver.sh 2 0
@@ -59,11 +55,7 @@ blocks:
         - name: Instrumentation tests(No email server) - part 2
           commands:
             # Setup and run an emulator
-            - $ANDROID_SDK_ROOT/emulator/emulator -accel-check
-            - echo -ne '\n' | avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
-            - cat ~/.android/avd/ci-test-pixel-x86-64-api29.avd/config.ini
-            - $ANDROID_SDK_ROOT/emulator/emulator -list-avds #debug
-            - $ANDROID_SDK_ROOT/emulator/emulator -avd ci-test-pixel-x86-64-api29 -no-window -no-boot-anim -no-audio &
+            - ./script/ci-setup-and-run-emulator.sh
             - ./script/ci-wait-for-emulator.sh #wait until ready
             # Run instrumentation tests
             - ./script/ci-instrumentation-tests-without-mailserver.sh 2 1
@@ -73,11 +65,7 @@ blocks:
             # Run an email server
             - cd docker-mailserver && ./run_email_server.sh && cd -
             # Setup and run an emulator
-            - $ANDROID_SDK_ROOT/emulator/emulator -accel-check
-            - echo -ne '\n' | avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
-            - cat ~/.android/avd/ci-test-pixel-x86-64-api29.avd/config.ini
-            - $ANDROID_SDK_ROOT/emulator/emulator -list-avds #debug
-            - $ANDROID_SDK_ROOT/emulator/emulator -avd ci-test-pixel-x86-64-api29 -no-window -no-boot-anim -no-audio &
+            - ./script/ci-setup-and-run-emulator.sh
             - ./script/ci-wait-for-emulator.sh #wait until ready
             # Run instrumentation tests
             - ./script/ci-instrumentation-tests-with-mailserver.sh
