--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -4,6 +4,8 @@ agent:
   machine:
     type: e1-standard-4
     os_image: ubuntu1804
+execution_time_limit:
+  minutes: 30
 
 fail_fast:
   stop:
@@ -42,6 +44,8 @@ global_job_config:
       - ./script/ci-install-android-sdk.sh
 blocks:
   - name: 'Build'
+    execution_time_limit:
+      minutes: 20
     task:
       jobs:
         - name: 'Build Project'
@@ -70,7 +74,7 @@ blocks:
 
   - name: 'Testing'
     execution_time_limit:
-      minutes: 45
+      minutes: 30
     task:
       jobs:
         - name: 'JUnit tests'
