Fixed adding 'application_id' as a resource value.| #972

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -35,7 +35,6 @@ android {
         versionName rootProject.ext.appVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
-        resValue 'string', 'base_application_id', android.defaultConfig.applicationId
 
         externalNativeBuild {
             cmake {
@@ -121,7 +120,6 @@ android {
             versionNameSuffix '_' + defaultConfig.versionCode + '__' + new SimpleDateFormat('yyyy_MM_dd').format(new Date())
             applicationIdSuffix '.debug'
             signingConfig signingConfigs.debug
-            resValue 'string', 'application_id', android.defaultConfig.applicationId + ".debug"
         }
     }
 
@@ -155,7 +153,6 @@ android {
             resValue 'string', 'gradle_http_log_level', 'BODY'
             resValue 'string', 'gradle_is_node_http_debug_enabled', 'true'
             resValue 'string', 'gradle_node_http_log_level', 'BODY'
-            resValue 'string', 'application_id', android.defaultConfig.applicationId
             versionNameSuffix "_dev"
             dimension "standard"
             minSdkVersion rootProject.ext.minSdkVersion
@@ -180,7 +177,6 @@ android {
             resValue 'string', 'gradle_http_log_level', 'BASIC'
             resValue 'string', 'gradle_is_node_http_debug_enabled', 'true'
             resValue 'string', 'gradle_node_http_log_level', 'BASIC'
-            resValue 'string', 'application_id', android.defaultConfig.applicationId
             dimension "standard"
         }
 
@@ -202,7 +198,6 @@ android {
             resValue 'string', 'gradle_http_log_level', 'NONE'
             resValue 'string', 'gradle_is_node_http_debug_enabled', 'false'
             resValue 'string', 'gradle_node_http_log_level', 'NONE'
-            resValue 'string', 'application_id', android.defaultConfig.applicationId
         }
 
         //This is an enterprise flavor
@@ -224,8 +219,11 @@ android {
             resValue 'string', 'gradle_http_log_level', 'BASIC'
             resValue 'string', 'gradle_is_node_http_debug_enabled', 'true'
             resValue 'string', 'gradle_node_http_log_level', 'BASIC'
-            resValue 'string', 'application_id', android.defaultConfig.applicationId + ".enterprise"
             dimension "standard"
+        }
+
+        applicationVariants.all { variant ->
+            variant.resValue 'string', 'application_id', variant.applicationId
         }
     }
 
