--- a/ext.gradle
+++ b/ext.gradle
@@ -23,6 +23,8 @@ ext {
     roomVersion = '2.2.5'
     /* https://developer.android.com/jetpack/androidx/releases/paging#declaring_dependencies*/
     pagingVersion = '2.1.2'
+    /*https://developer.android.com/jetpack/androidx/releases/navigation*/
+    navVersion = '2.3.1'
     /* https://mvnrepository.com/artifact/androidx.test.espresso*/
     espressoVersion = '3.3.0'
     /*https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit*/
