--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -376,7 +376,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     //https://mvnrepository.com/artifact/com.google.android.material/material
-    implementation 'com.google.android.material:material:1.3.0-beta01'
+    implementation 'com.google.android.material:material:1.3.0-rc01'
 
     //https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -406,9 +406,8 @@ dependencies {
     implementation 'com.madgag.spongycastle:pg:1.54.0.0'
     implementation 'commons-io:commons-io:2.8.0'
     implementation 'ch.acra:acra:4.11.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation 'ja.burhanrashid52:photoeditor:1.1.0'
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.21-2"
-    implementation 'net.openid:appauth:0.7.1-14-ged7e194'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.21"
+    implementation 'net.openid:appauth:0.7.1'
     implementation 'org.bitbucket.b_c:jose4j:0.7.3'
 }
