--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -410,4 +410,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.21"
     implementation 'net.openid:appauth:0.7.1'
     implementation 'org.bitbucket.b_c:jose4j:0.7.3'
+    implementation 'me.everything:overscroll-decor-android:1.1.0'
 }
