--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -191,8 +191,8 @@ android {
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BODY\""
             buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BODY\""
-            buildConfigField 'String', 'ATTESTER_URL', "\"http://localhost:1212/\""
-            buildConfigField 'String', 'API_URL', "\"http://localhost:1212/\""
+            buildConfigField 'String', 'ATTESTER_URL', "\"https://localhost:1212/\""
+            buildConfigField 'String', 'API_URL', "\"https://localhost:1212/\""
             resValue 'string', 'gradle_is_acra_enabled', 'false'
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
             resValue 'string', 'gradle_is_http_log_enabled', 'false'
@@ -337,6 +337,8 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation "androidx.test:core-ktx:1.3.0"
     androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.2'
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
+    androidTestImplementation "com.squareup.okhttp3:okhttp-tls:${rootProject.ext.okhttpVersion}"
 
     testImplementation "junit:junit:${rootProject.ext.junitVersion}"
     testImplementation "androidx.room:room-testing:$roomVersion"
@@ -390,7 +392,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-scalars:${rootProject.ext.retrofitVersion}"
     implementation "com.squareup.okio:okio:${okioVersion}"
     implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpVersion}"
-    implementation "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
     implementation "com.squareup.leakcanary:leakcanary-object-watcher-android:${rootProject.ext.leakcanaryVersion}"
 
     implementation "com.sun.mail:android-mail:${rootProject.ext.javaMailVersion}"
