--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -34,6 +34,7 @@ android {
         versionCode rootProject.ext.appVersionCode
         versionName rootProject.ext.appVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
         multiDexEnabled true
 
         externalNativeBuild {
@@ -249,6 +250,7 @@ android {
 
     testOptions {
         animationsDisabled = true
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
     }
 
     tasks.register('renameReleaseBuilds') {
@@ -339,6 +341,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.2'
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
     androidTestImplementation "com.squareup.okhttp3:okhttp-tls:${rootProject.ext.okhttpVersion}"
+    androidTestUtil 'androidx.test:orchestrator:1.3.0'
 
     testImplementation "junit:junit:${rootProject.ext.junitVersion}"
     testImplementation "androidx.room:room-testing:$roomVersion"
