--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -321,7 +321,7 @@ easylauncher {
 
 dependencies {
     kapt "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
-    kapt "androidx.annotation:annotation:${rootProject.ext.androidxBaseVersion}"
+    kapt 'androidx.annotation:annotation:1.1.0'
     kapt "androidx.room:room-compiler:$roomVersion"
 
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${rootProject.ext.leakcanaryVersion}"
@@ -356,12 +356,12 @@ dependencies {
     implementation "androidx.cardview:cardview:${rootProject.ext.androidxBaseVersion}"
     implementation 'androidx.browser:browser:1.3.0'
     implementation "androidx.recyclerview:recyclerview:${rootProject.ext.recyclerViewVersion}"
-    implementation "androidx.recyclerview:recyclerview-selection:${rootProject.ext.recyclerViewVersion}-rc03"
+    implementation "androidx.recyclerview:recyclerview-selection:${rootProject.ext.recyclerViewVersion}"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
     implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.lifecycleVersion}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${rootProject.ext.lifecycleVersion}"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${rootProject.ext.lifecycleVersion}"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
@@ -410,7 +410,7 @@ dependencies {
     implementation 'ch.acra:acra:4.11.1'
     implementation 'ja.burhanrashid52:photoeditor:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.31"
-    implementation 'net.openid:appauth:0.7.1-14-ged7e194'
+    implementation 'net.openid:appauth:0.8.0'
     implementation 'org.bitbucket.b_c:jose4j:0.7.6'
     implementation 'me.everything:overscroll-decor-android:1.1.0'
 }
