--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 
     repositories {
         google()
+        mavenCentral()
         jcenter()
 
         maven {
@@ -32,6 +33,7 @@ allprojects {
 
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 }
