--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -9,6 +9,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: "com.starter.easylauncher"
 
 def keystoreProperties = new Properties()
 File propertiesFile = project.file("keystore.properties")
@@ -238,7 +239,7 @@ android {
 
     lintOptions {
         warningsAsErrors true
-        disable 'NullSafeMutableLiveData'
+        disable 'NullSafeMutableLiveData', 'ObsoleteSdkInt'
     }
 
     packagingOptions {
@@ -295,6 +296,24 @@ android {
     }
 
     ndkVersion "22.0.7026061"
+}
+
+easylauncher {
+    buildTypes {
+        debug {
+            filters = [
+                    customRibbon(ribbonColor: "#6600CC", labelColor: "#FFFFFF", position: "top")
+            ]
+        }
+    }
+
+    variants {
+        devDebug {
+            filters = [
+                    customRibbon(label: "dev", ribbonColor: "#CC5F00", labelColor: "#FFFFFF", position: "top")
+            ]
+        }
+    }
 }
 
 dependencies {
