Switched to use 'bouncycastle' instead of 'spongycastle'. Added 'pgpainless' dependency.| #1067

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,5 @@ org.gradle.caching=true
 org.gradle.jvmargs=-Xmx2g
 android.useAndroidX=true
 android.enableJetifier=true
+#https://issuetracker.google.com/issues/159151549#comment7
+android.jetifier.blacklist=bcprov-jdk15on-1.68.jar
