--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -242,7 +242,12 @@ android {
     }
 
     packagingOptions {
-        pickFirst 'META-INF/*'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE.md'
+        exclude 'META-INF/NOTICE.md'
+        exclude 'META-INF/*.SF'
+        exclude 'META-INF/*.DSA'
+        exclude 'META-INF/*.RSA'
     }
 
     testOptions {
@@ -401,8 +406,6 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:${rootProject.ext.glideVersion}"
     implementation 'com.hootsuite.android:nachos:1.2.0'
     implementation 'com.nulab-inc:zxcvbn:1.4.0'
-    implementation 'com.madgag.spongycastle:pkix:1.54.0.0'
-    implementation 'com.madgag.spongycastle:pg:1.54.0.0'
     implementation 'commons-io:commons-io:2.8.0'
     implementation 'ch.acra:acra:4.11.1'
     implementation 'ja.burhanrashid52:photoeditor:1.1.0'
@@ -410,4 +413,13 @@ dependencies {
     implementation 'net.openid:appauth:0.8.0'
     implementation 'org.bitbucket.b_c:jose4j:0.7.6'
     implementation 'me.everything:overscroll-decor-android:1.1.0'
+
+    implementation ('org.pgpainless:pgpainless-core:0.2.0-alpha8') {
+        //exclude group: 'org.bouncycastle' because we will specify it manually
+        exclude group: 'org.bouncycastle'
+    }
+
+    //we can't use a newer version yet
+    implementation "org.bouncycastle:bcpg-jdk15on:${rootProject.ext.bouncycastleVersion}"
+    implementation "org.bouncycastle:bcpkix-jdk15on:${rootProject.ext.bouncycastleVersion}"
 }
