--- a/ext.gradle
+++ b/ext.gradle
@@ -40,4 +40,6 @@ ext {
     /*https://mvnrepository.com/artifact/com.github.bumptech.glide/glide*/
     glideVersion = '4.12.0'
     junitVersion = '4.13'
+    /*https://mvnrepository.com/search?q=org.bouncycastle*/
+    bouncycastleVersion = '1.68'
 }
