--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -23,7 +23,7 @@ global_job_config:
       value: /home/semaphore/Android/Sdk
   prologue:
     commands:
-      - export PATH=${ANDROID_SDK_ROOT}/emulator:${ANDROID_SDK_ROOT}/tools:${ANDROID_SDK_ROOT}/tools/bin:${ANDROID_SDK_ROOT}/platform-tools:${PATH}
+      - export PATH=${ANDROID_SDK_ROOT}/emulator:${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin:${ANDROID_SDK_ROOT}/platform-tools:${PATH}
       - sudo rm -rf ~/.rbenv ~/.phpbrew
       - checkout
       # restore global caches
@@ -51,6 +51,7 @@ blocks:
         - name: 'Build Project'
           commands:
             - cat /proc/cpuinfo # print debug info
+            - java -version # print Java version
             - ./gradlew assembleDevTestDebug # compile project
             - ./script/ci-lint-checks.sh # run Lint checks
       epilogue:
