--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
-apply plugin: 'com.akaita.android.easylauncher'
+apply plugin: "com.starter.easylauncher"
 
 def keystoreProperties = new Properties()
 File propertiesFile = project.file("keystore.properties")
@@ -239,12 +239,15 @@ android {
 
     lintOptions {
         warningsAsErrors true
-        //we disable 'IconLauncherShape' to prevent fails because of use easylauncher
-        disable 'NullSafeMutableLiveData', 'IconLauncherShape'
     }
 
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE.md'
+        exclude 'META-INF/NOTICE.md'
+        exclude 'META-INF/*.SF'
+        exclude 'META-INF/*.DSA'
+        exclude 'META-INF/*.RSA'
     }
 
     testOptions {
@@ -300,12 +303,10 @@ android {
 }
 
 easylauncher {
-    iconNames "@mipmap/ic_launcher_foreground"
-    foregroundIconNames "@mipmap/ic_launcher_foreground" // Foreground of adaptive launcher icon
     buildTypes {
         debug {
             filters = [
-                    customColorRibbonFilter("debug", "#556600CC", "#FFFFFF", "top")
+                    customRibbon(ribbonColor: "#6600CC", labelColor: "#FFFFFF", position: "top")
             ]
         }
     }
@@ -313,7 +314,7 @@ easylauncher {
     variants {
         devDebug {
             filters = [
-                    customColorRibbonFilter("dev", "#55CC5F00", "#FFFFFF", "top")
+                    customRibbon(label: "dev", ribbonColor: "#CC5F00", labelColor: "#FFFFFF", position: "top")
             ]
         }
     }
@@ -321,7 +322,7 @@ easylauncher {
 
 dependencies {
     kapt "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
-    kapt "androidx.annotation:annotation:${rootProject.ext.androidxBaseVersion}"
+    kapt 'androidx.annotation:annotation:1.1.0'
     kapt "androidx.room:room-compiler:$roomVersion"
 
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${rootProject.ext.leakcanaryVersion}"
@@ -356,12 +357,12 @@ dependencies {
     implementation "androidx.cardview:cardview:${rootProject.ext.androidxBaseVersion}"
     implementation 'androidx.browser:browser:1.3.0'
     implementation "androidx.recyclerview:recyclerview:${rootProject.ext.recyclerViewVersion}"
-    implementation "androidx.recyclerview:recyclerview-selection:${rootProject.ext.recyclerViewVersion}-rc03"
+    implementation "androidx.recyclerview:recyclerview-selection:${rootProject.ext.recyclerViewVersion}"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
     implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.lifecycleVersion}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${rootProject.ext.lifecycleVersion}"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${rootProject.ext.lifecycleVersion}"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
@@ -396,6 +397,7 @@ dependencies {
     implementation "com.squareup.leakcanary:leakcanary-object-watcher-android:${rootProject.ext.leakcanaryVersion}"
 
     implementation "com.sun.mail:android-mail:${rootProject.ext.javaMailVersion}"
+    implementation "com.sun.mail:android-activation:${rootProject.ext.javaMailVersion}"
     implementation("com.sun.mail:gimap:${rootProject.ext.javaMailVersion}") {
         //exclude group: 'com.sun.mail' because it exists in 'com.sun.mail:android-mail'
         exclude group: 'com.sun.mail'
@@ -404,13 +406,19 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:${rootProject.ext.glideVersion}"
     implementation 'com.hootsuite.android:nachos:1.2.0'
     implementation 'com.nulab-inc:zxcvbn:1.4.0'
-    implementation 'com.madgag.spongycastle:pkix:1.54.0.0'
-    implementation 'com.madgag.spongycastle:pg:1.54.0.0'
     implementation 'commons-io:commons-io:2.8.0'
     implementation 'ch.acra:acra:4.11.1'
     implementation 'ja.burhanrashid52:photoeditor:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.31"
-    implementation 'net.openid:appauth:0.7.1-14-ged7e194'
+    implementation 'net.openid:appauth:0.8.0'
     implementation 'org.bitbucket.b_c:jose4j:0.7.6'
     implementation 'me.everything:overscroll-decor-android:1.1.0'
+
+    implementation ('org.pgpainless:pgpainless-core:0.2.0-alpha8') {
+        //exclude group: 'org.bouncycastle' because we will specify it manually
+        exclude group: 'org.bouncycastle'
+    }
+
+    implementation "org.bouncycastle:bcpg-jdk15on:${rootProject.ext.bouncycastleVersion}"
+    implementation "org.bouncycastle:bcpkix-jdk15on:${rootProject.ext.bouncycastleVersion}"
 }
