--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 
     repositories {
         google()
+        mavenCentral()
         jcenter()
 
         maven {
@@ -23,7 +24,7 @@ buildscript {
         // in the individual module build.gradle files
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.15.0"
-        classpath 'com.akaita.android:easylauncher:1.3.1'
+        classpath "com.project.starter:easylauncher:3.10.1"
     }
 }
 
@@ -32,6 +33,7 @@ allprojects {
 
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 }
