issue #1052 port MsgBlockParser from TypeScript to Kotlin

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,13 @@ local.properties
 /.idea/misc.xml
 /release
 /docker-mailserver/maildata_volume/
+
 # Keystore files
 *.jks
+
 # keystore info
 /FlowCrypt/keystore.properties
+
+# some runtime files
+.attach*
+
