Updated semaphore.yml. Added --console=plain for assembleDevTestDebug.| #1078

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -58,7 +58,7 @@ blocks:
             # print Java version
             - java -version
             # compile project
-            - ./gradlew assembleDevTestDebug
+            - ./gradlew --console=plain assembleDevTestDebug
       epilogue:
         on_pass:
           commands:
