issue #1007 do not ignore encryptKey and decryptKey exceptions + update readme

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ local.properties
 # some runtime files
 .attach*
 
+# some helper scripts copied into the repo root dir
+/compile.sh
+/ctest.sh
+/test.sh
+
