--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -3,7 +3,12 @@
  * Contributors: DenBond7
  */
 
+import com.android.ddmlib.DdmPreferences
+
 import java.text.SimpleDateFormat
+
+//Setting global timeout for apk installation to 10 minutes. We need it for CI
+DdmPreferences.setTimeOut(10 * 60 * 1000)
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
@@ -300,6 +305,10 @@ android {
     }
 
     ndkVersion "22.0.7026061"
+
+    adbOptions {
+        timeOutInMs 60 * 1000 // Set timeout to 60 seconds. We need it for CI.
+    }
 }
 
 configurations {
