--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -128,6 +128,10 @@ blocks:
       epilogue:
         always:
           commands:
+            # print debug info about connected device
+            - echo "Print connected devices"
+            - adb devices
+
             # store logcat log
             - echo "Store logcat log"
             - artifact push job --expire-in 1w ~/logcat_log.txt
