--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -146,3 +146,9 @@ blocks:
             # store tests results
             - echo "Store tests results"
             - artifact push job --expire-in 1w FlowCrypt/build/reports/
+
+            # store the device's screenshot. it may help to debug a failure
+            - echo "Store the device's screenshot"
+            - adb shell screencap -p /sdcard/screencap.png
+            - adb pull "/sdcard/screencap.png"
+            - artifact push job --expire-in 1w screencap.png
