--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -4,6 +4,8 @@
  */
 
 import com.android.ddmlib.DdmPreferences
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+import org.gradle.api.tasks.testing.logging.TestLogEvent
 
 import java.text.SimpleDateFormat
 
@@ -257,6 +259,31 @@ android {
 
     testOptions {
         animationsDisabled = true
+        unitTests.all {
+            testLogging {
+                events TestLogEvent.FAILED,
+                        TestLogEvent.PASSED,
+                        TestLogEvent.SKIPPED,
+                        TestLogEvent.STANDARD_ERROR
+                exceptionFormat TestExceptionFormat.FULL
+                showStandardStreams true
+                showCauses true
+                showExceptions true
+                showStackTraces true
+            }
+
+            afterSuite { desc, result ->
+                if (!desc.parent) {
+                    def output = "Results: ${result.resultType} (${result.testCount} tests," +
+                            " ${result.successfulTestCount} passed, ${result.failedTestCount}" +
+                            " failed, ${result.skippedTestCount} skipped)"
+                    def startItem = '|  ', endItem = '  |'
+                    def repeatLength = startItem.length() + output.length() + endItem.length()
+                    println('\n' + ('-' * repeatLength) + '\n' + startItem + output
+                            + endItem + '\n' + ('-' * repeatLength))
+                }
+            }
+        }
     }
 
     tasks.register('renameReleaseBuilds') {
