--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -442,7 +442,7 @@ dependencies {
     implementation 'com.hootsuite.android:nachos:1.2.0'
     implementation 'com.nulab-inc:zxcvbn:1.4.1'
     implementation 'commons-io:commons-io:2.8.0'
-    implementation 'ch.acra:acra:4.11.1'
+    implementation 'ch.acra:acra-http:5.7.0'
     implementation 'ja.burhanrashid52:photoeditor:1.1.1'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.32"
     implementation 'net.openid:appauth:0.8.1'
